--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,8 @@ jobs:
           registry: 'npm.pkg.github.com'
           token: 'example-token'
       - name: Check if the result is correct
-        run: cmp --silent .npmrc .npmrc.example || echo "Result is incorrect."
+        run: |
+          cat .npmrc
+          cat .npmrc.example
+          cmp --silent .npmrc .npmrc.example || echo "Result is incorrect."
 
