feat: use compiled action

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "compile": "ncc build lib/index.js --out compiled --license licenses.txt",
+    "dist": "npm run build && npm run compile",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,6 +30,7 @@
     "@actions/tool-cache": "^1.6.1"
   },
   "devDependencies": {
+    "@vercel/ncc": "^0.28.4",
     "typescript": "^4.2.4"
   }
 }
