--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,8 @@ jobs:
           node-version: 12
       - name: Install dependencies
         run: npm ci
-      - name: Build action
-        run: npm run build
+      - name: Compile action
+        run: npm run dist
       - name: Run local dot-npmrc action
         uses: ./
         with:
