--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
           registry: 'npm.pkg.github.com'
           token: 'example-token'
       - name: Check if the result is correct
-        uses: tianhaoz95-actions/file-diff@main
+        uses: tianhaoz95-actions/file-diff@v1.0.0
         with:
           lhs: '.npmrc'
           rhs: '.npmrc.example'
