--- a/.releaserc
+++ b/.releaserc
@@ -5,6 +5,10 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    ["@semantic-release/npm", {
+        "npmPublish": "false"
+    }],
     ["@semantic-release/git", {
       "assets": ["package.json", "package-lock.json", "compiled/index.js"],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
