--- a/.releaserc
+++ b/.releaserc
@@ -10,7 +10,7 @@
         "npmPublish": "false"
     }],
     ["@semantic-release/git", {
-      "assets": ["package.json", "package-lock.json", "compiled/index.js"],
+      "assets": ["package.json", "package-lock.json", "compiled/index.js", "CHANGELOG.md"],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
     "@semantic-release/github"
