--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@actions/tool-cache": "^1.6.1"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "@vercel/ncc": "^0.28.4",
     "semantic-release": "^17.4.2",
