fix: add back gh token

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,3 +15,5 @@ jobs:
           node-version: 14
       - run: npm ci && npm run dist
       - run: npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
